[gd_scene load_steps=18 format=3 uid="uid://c3wi8ebtk6yxx"]

[ext_resource type="Script" path="res://Scripts/enemy_scripts/enemy_1.gd" id="1_hbhmb"]
[ext_resource type="Shader" path="res://Shaders/flash_hit.gdshader" id="2_5ivl7"]
[ext_resource type="Texture2D" uid="uid://b2kycbm1j0pk3" path="res://Sprites/Enemies/green_suraimo.png" id="2_7vopm"]
[ext_resource type="AudioStream" uid="uid://c6nh7sir7m5vq" path="res://Sfx/death_teste.mp3" id="4_fgjdb"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_aeoxq"]
frequency = 0.0189
fractal_type = 3

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_jrqoh"]
noise = SubResource("FastNoiseLite_aeoxq")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1coxj"]
resource_local_to_scene = true
shader = ExtResource("2_5ivl7")
shader_parameter/is_active = false
shader_parameter/burn_color = Color(1, 1, 1, 1)
shader_parameter/burn_size = null
shader_parameter/dissolve_amount = 0.0
shader_parameter/emission_amount = null
shader_parameter/dissolve_texture = SubResource("NoiseTexture2D_jrqoh")

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ny24o"]
radius = 8.56435
height = 17.1287

[sub_resource type="CircleShape2D" id="CircleShape2D_1r4nj"]
radius = 8.52014

[sub_resource type="Animation" id="Animation_j03nv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:material:shader_parameter/is_active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_horur"]
resource_name = "death"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:material:shader_parameter/dissolve_amount")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Texture:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_7vopm")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Texture:material:shader_parameter/is_active")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_rd4pm"]
resource_name = "flash_hit"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:material:shader_parameter/is_active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Texture:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_7vopm")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p4f07"]
_data = {
"RESET": SubResource("Animation_j03nv"),
"death": SubResource("Animation_horur"),
"flash_hit": SubResource("Animation_rd4pm")
}

[sub_resource type="Animation" id="Animation_uv7gn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Popup_label:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.5, 1.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Popup_label:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Popup_label:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_pd6po"]
resource_name = "crit_popup"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Popup_label:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(2.5, 2.5), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Popup_label:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-17, 0), Vector2(-17, -20)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Popup_label:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.6, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.890196, 0.882353, 0, 1), Color(1, 1, 0.0666667, 0)]
}

[sub_resource type="Animation" id="Animation_g1r3t"]
resource_name = "dmg_popup"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Popup_label:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(2, 2), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Popup_label:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -20)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Popup_label:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.6, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_naedu"]
_data = {
"RESET": SubResource("Animation_uv7gn"),
"crit_popup": SubResource("Animation_pd6po"),
"dmg_popup": SubResource("Animation_g1r3t")
}

[node name="Enemy1" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 2
collision_mask = 2
motion_mode = 1
slide_on_ceiling = false
script = ExtResource("1_hbhmb")
DEF = 2
enemy_hp = 100
move_speed = 100.0

[node name="Texture" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_1coxj")
scale = Vector2(1.75, 1.75)
texture = ExtResource("2_7vopm")

[node name="enemy_col" type="CollisionShape2D" parent="."]
visible = false
scale = Vector2(3.85318, 3.84784)
shape = SubResource("CapsuleShape2D_ny24o")

[node name="hurtbox" type="Area2D" parent="."]
visible = false
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
scale = Vector2(3.88, 3.96)
shape = SubResource("CircleShape2D_1r4nj")

[node name="EnemyAnim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_p4f07")
}

[node name="death_snd" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_fgjdb")
volume_db = -16.0
pitch_scale = 1.8

[node name="dmg_display" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -25.0
offset_top = -67.0
offset_right = -25.0
offset_bottom = -67.0
grow_horizontal = 2
grow_vertical = 2

[node name="Popup_anim" type="AnimationPlayer" parent="dmg_display"]
speed_scale = 2.0
libraries = {
"": SubResource("AnimationLibrary_naedu")
}

[node name="Popup_label" type="Label" parent="dmg_display"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 40.0
offset_bottom = 26.0
scale = Vector2(1.5, 1.5)
text = "123"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
